# techblog

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy-pages.yml
comparisons/api-language/: comparison-cuda-vs-hip-vs-glsl.md  comparison-vulkan-vs-cuda.md
comparisons/gpu-architecture/: comparison-gpu-architecture-template.md
docs/: comparison-index.md  post-index.md  post-template.md  weekly-review-checklist.md  worklog-index.md
notes/: note-2026-02-14-research-seeds.md
posts-ko/worklog/: 2026-02-15-worklog-02-vulkan-barrier-audit-ko.md
posts/comparison/api-language/: 2026-02-16-comparison-cuda-vs-vulkan-init.md
posts/comparison/gpu-architecture/: 2026-02-17-comparison-nvidia-ampere-vs-ada-template.md
posts/unreal-summary/: VersionHistory.md
posts/unreal-summary/AI/: Behavior_Tree_Execution_Deep_Dive.md  Environment_Query_System_Deep_Dive.md  Mass_Crowd_Avoidance_Deep_Dive.md  Mass_Entity_LOD_System_Deep_Dive.md  Mass_Entity_System_Deep_Dive.md  Mover_Plugin_And_Mass_AI_Deep_Dive.md  Overview.md  State_Tree_Deep_Dive.md
posts/unreal-summary/Animation/: AnimGraph_Compilation_And_Execution_Deep_Dive.md  Control_Rig_System_Deep_Dive.md  Overview.md  Skeletal_Mesh_Skinning_Deep_Dive.md
posts/unreal-summary/Asset/: Asset_Registry_And_AssetManager_Deep_Dive.md  Package_Serialization_And_Linker_Deep_Dive.md
posts/unreal-summary/Audio/: MetaSound_System_Deep_Dive.md
posts/unreal-summary/Core/: Async.md  Console.md  Containers.md  Delegates.md  EngineInitialization.md  FileSystem.md  HAL.md  IOStore.md  Logging.md  Math.md  Memory.md  ModuleSystem.md  Multithreading.md  Overview.md  SmartPointers.md  String.md  TaskGraph.md  Templates.md  Time.md
posts/unreal-summary/CoreUObject/: AssetRegistry.md  GarbageCollection.md  ObjectIndexing.md  PackageAndLinker.md  ReflectionSystem.md  Serialization.md  UObject.md  UObjectHash.md
posts/unreal-summary/GameFramework/: Actor.md  Actor_Lifecycle_And_Replication_Deep_Dive.md  Component.md  GameMode.md  Overview.md  Pawn.md  PlayerController.md  TickSystem.md  World.md  World_Tick_Pipeline_Deep_Dive.md
posts/unreal-summary/Gameplay/: Camera_System_Deep_Dive.md  Enhanced_Input_System_Deep_Dive.md  GameMode_And_GameState_Deep_Dive.md  Gameplay_Ability_System_Deep_Dive.md  Player_Controller_And_Pawn_Deep_Dive.md
posts/unreal-summary/Integration/: WebView_CSharp_Server_Complete_Integration.md
posts/unreal-summary/Lumen/: Architecture.md  GlobalDistanceField.md  HZB_ScreenTracing.md  HardwareRayTracing.md  HitLighting.md  LumenReflections.md  LumenTracing.md  MeshDistanceField.md  Optimization.md  Overview.md  RadianceCache.md  ScreenProbe.md  SurfaceCache.md
posts/unreal-summary/Material/: Material_System_And_Shader_Compilation_Deep_Dive.md
posts/unreal-summary/Movement/: CharacterMovement_NetworkPrediction_Deep_Dive.md  MoverVsCharacterMovement.md  Overview.md
posts/unreal-summary/MuJoCoChaos/: AdvancedFeatures.md  ChaosIntegration.md  (+8 more)
posts/worklog/: 2026-02-14-worklog-01-cuda-vulkan-init-on-nvidia.md  2026-02-15-worklog-02-vulkan-barrier-audit.md
posts/worklog/cuda-vulkan-sass-series/: CMakeLists.txt
posts/worklog/cuda-vulkan-sass-series/cmake/: CompileGLSL.cmake  DumpSASS.cmake
posts/worklog/cuda-vulkan-sass-series/exp01_toolchain/: CMakeLists.txt  main_cuda.cpp  main_vulkan.cpp
posts/worklog/cuda-vulkan-sass-series/exp01_toolchain/cuda/: noop_kernel.cu
posts/worklog/cuda-vulkan-sass-series/exp01_toolchain/glsl/: noop.comp
posts/worklog/cuda-vulkan-sass-series/exp02_vector_add/: CMakeLists.txt  main.cpp
posts/worklog/cuda-vulkan-sass-series/exp02_vector_add/cuda/: vector_add.cu
posts/worklog/cuda-vulkan-sass-series/exp02_vector_add/glsl/: vector_add.comp
posts/worklog/cuda-vulkan-sass-series/exp03_memory_coalescing/: CMakeLists.txt  main.cpp
posts/worklog/cuda-vulkan-sass-series/exp03_memory_coalescing/cuda/: coalesce_aos.cu  coalesce_soa.cu
posts/worklog/cuda-vulkan-sass-series/exp03_memory_coalescing/glsl/: coalesce_aos.comp  coalesce_soa.comp
posts/worklog/cuda-vulkan-sass-series/exp04_bindless_bda/: CMakeLists.txt  main.cpp
posts/worklog/cuda-vulkan-sass-series/exp04_bindless_bda/cuda/: raw_ptr.cu
posts/worklog/cuda-vulkan-sass-series/exp04_bindless_bda/glsl/: bda_access.comp  ubo_access.comp
posts/worklog/cuda-vulkan-sass-series/exp05_jit_pipeline_cache/: CMakeLists.txt  main.cpp
posts/worklog/cuda-vulkan-sass-series/exp05_jit_pipeline_cache/cuda/: jit_kernel.cu
posts/worklog/cuda-vulkan-sass-series/exp05_jit_pipeline_cache/glsl/: cached_kernel.comp
posts/worklog/cuda-vulkan-sass-series/shared/include/: cuda_context.h  vk_init.h  vk_pipeline_exec.h
posts/worklog/cuda-vulkan-sass-series/shared/src/: cuda_context.cpp  vk_init.cpp  vk_pipeline_exec.cpp
scripts/: build_site.py  import_unreal_summary.py  inject_frontmatter.py
site/: app.js  index.html  post.html  post.js  posts.json  styles.css  unreal.html  unreal.js
templates/: comparison-template.md  note-template.md  worklog-template.md
worklog/: worklog-2026-02-14-vai-baseline.md
(+156 files in other folders)
